<resources>
    <string name="app_name">MyCoffeeApp</string>
    <string name="title_home">Tin tức</string>
    <string name="title_order">Đặt hàng</string>
    <string name="title_personal">Tài khoản</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_appbar_search">Search</string>
    <string name="title_appbar_logo">Logo</string>
    <string name="title_appbar_drawer">Drawer</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="favorite_content_description">Add to favorite</string>
    <string name="home_topic_1">Coffee</string>
    <string name="facebook_application_id">721859721982848</string>
    <string name="facebook_login_protocol_scheme">fb721859721982848</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_name">Profile name</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="search_hint">Nhập tên sản phẩm</string>
    <string name="bill_info">Thông tin đơn hàng</string>
    <string name="name_input">Vui lòng nhập tên</string>
    <string name="name_input_icon">name_input_icon</string>
    <string name="name_input_label">Tên</string>
    <string name="phone_input_icon">phone input</string>
    <string name="phone_input_label">Số điện thoại</string>
    <string name="phone_input">Vui lòng nhập số điện thoại của bạn</string>
    <string name="address_input_icon">"Address input icon "</string>
    <string name="address_input_label">Địa chỉ nhận hàng</string>
    <string name="address_input">Vui lòng nhập địa chỉ nơi bạn muốn nhận hàng</string>
    <string name="cart_info">Chi tiết giỏ hàng</string>
    <string name="note_input_label">Thêm ghi chú</string>
    <string name="status_cancel">Đã hủy</string>
    <string name="status_processing">Đang xử lý</string>
    <string name="status_complete">Đã hoàn thành</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_store">Cửa hàng</string>
</resources>
