<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="50dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bill_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/menu_item_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/bill_info"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/bill_input_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="@dimen/personal_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/bill_info_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/my_cardview_light_background"
            app:cardCornerRadius="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_margin="@dimen/bill_input_padding"
                    android:id="@+id/name_input"
                    app:startIconDrawable="@drawable/ic_person_black_16dp"
                    app:startIconContentDescription="@string/name_input_icon"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_input_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input_edittext"
                        android:lines="1"
                        android:textAppearance="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/name_input"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_margin="@dimen/bill_input_padding"
                    android:id="@+id/phone_input"
                    app:startIconDrawable="@drawable/ic_phone_black_16dp"
                    app:startIconContentDescription="@string/phone_input_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_input_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input_edittext"
                        android:lines="1"
                        android:textAppearance="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@+id/phone_input"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/address_input"
                    android:layout_margin="@dimen/bill_input_padding"
                    app:startIconDrawable="@drawable/ic_location_on_black_16dp"
                    app:startIconContentDescription="@string/address_input_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_input_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_input_edittext"
                        android:lines="2"
                        android:textAppearance="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@+id/address_input"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/note_input"
                    android:layout_margin="@dimen/bill_input_padding"
                    app:startIconDrawable="@drawable/ic_event_note_black_16dp"
                    app:startIconContentDescription="@string/address_input_icon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:hint="@string/note_input_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/note_input_edittext"
                        android:lines="2"
                        android:textAppearance="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/menu_item_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_input_container"
            android:text="@string/cart_info"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cart_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/my_cardview_light_background"
            app:cardCornerRadius="0dp"
            app:cardElevation="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cart_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cart_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_item_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/shipping_fee_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bill_input_padding"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cart_item_list">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phí giao hàng"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/shipping_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 đ"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/total_amount_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bill_input_padding"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shipping_fee_container">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tổng giá"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="xx.xxx đ"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/button_confirm_height"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:icon="@drawable/ic_check_black_24dp"
            app:iconPadding="4dp"
            app:iconGravity="textStart"
            app:iconTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:text="Đặt hàng" />
        <TextView
            android:id="@+id/price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:text="0 đ"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/toolbar_cart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"/>
</androidx.constraintlayout.widget.ConstraintLayout>